fixed overflow & mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base{
 	body{
-		@apply max-h-screen overflow-hidden
+		@apply max-h-screen md:overflow-hidden
 	}
 }
 
